welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:6: error: type mismatch;
 found   : Unit
 required: Boolean
		if (talking==true) {
                ^